--- a/src/_includes/post/date.njk
+++ b/src/_includes/post/date.njk
@@ -1,4 +1,4 @@
-<span class="link-mono group-hover:opacity-100">
+<span class="link-mono lg:group-hover:opacity-100">
   <time datetime="{{ date.toISOString() }}">
     {{ date.toLocaleDateString('en-GB') }}
   </time>
