--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,24 +2,24 @@
 layout: layouts/default.njk
 ---
 
-<div class="min-h-body backdrop-blur bg-base-100 bg-opacity-60">
-  <header class="hero pt-16 min-h-[20rem] lg:min-h-[24rem]">
+<div class="min-h-body bg-base-100 bg-opacity-60 backdrop-blur">
+  <header class="hero min-h-[20rem] pt-16 lg:min-h-[24rem]">
     {{ content | safe }}
   </header>
-  <div class="pb-24 flex flex-col lg:flex-row">
-    <div class="lg:hidden collapse collapse-arrow">
+  <div class="flex flex-col pb-24 lg:flex-row">
+    <div class="collapse-arrow collapse lg:hidden">
       <input type="checkbox" />
       <div class="collapse-title text-xl font-bold">
         {% if lang == 'vi' %}Danh sách tags{% else %}Tags list{% endif %}
       </div>
-      <div class="collapse-content pt-4 flex flex-wrap justify-end sm:justify-center gap-4">
+      <div class="collapse-content flex flex-wrap justify-end gap-4 pt-4 sm:justify-center">
         {% include "home/tags.njk" %}
       </div>
     </div>
-    <div class="mt-8 px-8 hidden lg:flex flex-col items-start justify-start gap-4">
+    <div class="mt-8 hidden flex-col items-start justify-start gap-4 px-8 lg:flex">
       {% include "home/tags.njk" %}
     </div>
-    <div class="mx-4 sm:mx-auto h-fit flex flex-wrap justify-center gap-x-4 lg:gap-x-8">
+    <div class="mx-4 flex h-fit flex-wrap justify-center gap-x-4 sm:mx-auto lg:gap-x-8">
       {% set posts = collections[ tag ] or collections.posts %}
       {% include "home/posts.njk" %}
       {% for ghost in "0123456789" %}
